fix build.gradle